# rtm

./: .gitignore  README.txt  config.txt  environment.yml  main.py  pyproject.toml  test.py
rtm_optim/: dmp2msh.py  flatten_mesh.py  msh2dmp.py  msh2obj.py  remove_points.py
src/rtm_rlperdue/: control_optim.py  dataset.py  dataset1.py  dataset_mpi.py  lims.py  rtm.py  setup.py
src/rtm_rlperdue.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rtm_rlperdue/lb_templates/: dataset.lb
src/rtm_rlperdue/masters/: control_m.py  dataset_m.py  maxtimes_m.py  test_m.py
src/rtm_rlperdue/workers/: control-LO_w.lb  control_w.lb  dataset_w.lb  maxtimes_w.lb  test-LO_w.lb  test_w.lb
test2/: fold.msh
tests/bpillar/control0/: results.npz
tests/bpillar/control0/res/: res0.dmp  res1.dmp  res10.dmp  res11.dmp  res12.dmp  res13.dmp  res14.dmp  res15.dmp  res2.dmp  res3.dmp  res4.dmp  res5.dmp  res6.dmp  res7.dmp  res8.dmp  res9.dmp
tests/bpillar/dataset_1_50/: klist.npy  maxtimes.npy  nodalfilltimes.npy  sensortimes.npy
tests/bpillar/dataset_1_50/res/: res0.msh  res1.msh  res10.msh  res11.msh  res12.msh  res13.msh  res14.msh  res15.msh  res2.msh  res3.msh  res4.msh  res5.msh  res6.msh  res7.msh  res8.msh  res9.msh
tests/bpillar/mesh/: mesh.dmp  mesh.msh  mesh_flat.npy  regions.zon  sensors.txt
tests/test1/: bpillar.dmp  bpillar.msh
tests/test1/dataset/: res0.msh  res1.msh  res10.msh  res11.msh  res12.msh  res13.msh  res14.msh  res15.msh  res2.msh  res3.msh  res4.msh  res5.msh  res6.msh  res7.msh  res8.msh  res9.msh
tests/test2/: fold.dmp  fold.msh
