[project]
name = "rtm_rlperdue"
version = "0.1"
authors = [{name="Russell Perdue", email="rperdue@udel.edu"}]
description = "Optimization of auxiliary gate locations and activation times for manufacturing parts with RTM"
readme = "README.txt"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
